--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "elysius-rust"
+name = "elysius-v01"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-olc_pixel_game_engine = "0.5.0"
+ggez = "0.8.0-rc0"
+glam = "0.20"
